[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameplay/drum_visual.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/gameplay.gd" type="Script" id=2]
[ext_resource path="res://gameplay/hit_error.tscn" type="PackedScene" id=3]
[ext_resource path="res://temporary/osu_rwxudnxmu5.png" type="Texture" id=4]
[ext_resource path="res://temporary/untitled.png" type="Texture" id=5]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[node name="Gameplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Ref" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.878431 )
texture = ExtResource( 4 )

[node name="Ref2" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.878431 )
texture = ExtResource( 5 )

[node name="BarRight" type="TextureRect" parent="."]
anchor_right = 1.0
margin_top = 304.0
margin_bottom = 582.0
expand = true

[node name="HitPointOffset" type="Control" parent="BarRight"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 361.0
margin_right = 361.0

[node name="HitPoint" type="TextureRect" parent="BarRight/HitPointOffset"]
self_modulate = Color( 1, 1, 1, 0.435294 )
margin_left = -61.0
margin_top = -61.0
margin_right = 61.0
margin_bottom = 61.0
expand = true

[node name="Rim" type="TextureRect" parent="BarRight/HitPointOffset/HitPoint"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
expand = true

[node name="KiaiGlow" type="TextureRect" parent="BarRight/HitPointOffset"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -196.0
margin_top = -196.0
margin_right = 196.0
margin_bottom = 196.0
expand = true
stretch_mode = 6

[node name="Judgement" type="TextureRect" parent="BarRight/HitPointOffset"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -196.0
margin_top = -196.0
margin_right = 196.0
margin_bottom = 196.0
expand = true
stretch_mode = 6

[node name="ObjectContainer" type="Control" parent="BarRight/HitPointOffset"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimingIndicator" type="Label" parent="BarRight/HitPointOffset"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = -203.0
margin_bottom = -130.0
grow_horizontal = 2
theme_type_variation = "FontBold50"

[node name="DrumVisual" parent="BarRight" instance=ExtResource( 1 )]

[node name="Pippidon" type="TextureRect" parent="."]
margin_top = 23.0
margin_right = 673.0
margin_bottom = 360.0
expand = true
stretch_mode = 5

[node name="UI" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -37.0
margin_top = 8.0
margin_right = -11.0
margin_bottom = 140.0
grow_horizontal = 0

[node name="Score" type="Label" parent="UI"]
margin_right = 26.0
margin_bottom = 64.0
theme_type_variation = "FontBold65Outlined"

[node name="LastHitScore" type="Label" parent="UI"]
modulate = Color( 1, 0.227451, 0.227451, 1 )
margin_top = 68.0
margin_right = 26.0
margin_bottom = 132.0
theme_type_variation = "FontBold65Outlined"
align = 2

[node name="Accuracy" type="HBoxContainer" parent="UI"]
margin_top = 136.0
margin_right = 26.0
margin_bottom = 200.0
theme_type_variation = "SeparationP01"

[node name="Label" type="Label" parent="UI/Accuracy"]
margin_bottom = 64.0
size_flags_horizontal = 3
theme_type_variation = "FontBold65Outlined"
align = 2

[node name="Percent" type="Label" parent="UI/Accuracy"]
margin_left = 1.0
margin_top = 34.0
margin_right = 26.0
margin_bottom = 64.0
size_flags_vertical = 8
theme_type_variation = "FontBold26Outlined"
text = "%"

[node name="SongProgress" type="ProgressBar" parent="UI"]
margin_top = 204.0
margin_right = 26.0
margin_bottom = 219.0
rect_min_size = Vector2( 0, 15 )
percent_visible = false

[node name="BreakProgress" type="TextureProgress" parent="UI/SongProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
step = 0.01
texture_progress = SubResource( 2 )
fill_mode = 1
tint_under = Color( 0.0352941, 0.0352941, 0.0352941, 0.490196 )
tint_progress = Color( 0.360784, 0.737255, 0.376471, 1 )
nine_patch_stretch = true

[node name="HitError" parent="." instance=ExtResource( 3 )]

[node name="Debug" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -100.0
margin_right = -9.0
margin_bottom = -10.0
grow_vertical = 0

[node name="DebugText" type="Label" parent="Debug"]
margin_right = 1421.0
margin_bottom = 39.0
text = "Welcome to TaiClone!"

[node name="TempLoadChart" type="HBoxContainer" parent="Debug"]
margin_top = 43.0
margin_right = 1421.0
margin_bottom = 125.0
size_flags_vertical = 3
theme_type_variation = "SeparationP08"

[node name="LineEdit" type="LineEdit" parent="Debug/TempLoadChart"]
margin_right = 370.0
margin_bottom = 82.0
rect_min_size = Vector2( 370, 0 )
placeholder_text = "Chart Location"

[node name="LoadButton" type="Button" parent="Debug/TempLoadChart"]
margin_left = 378.0
margin_right = 458.0
margin_bottom = 82.0
rect_min_size = Vector2( 80, 0 )
text = "Load"

[node name="PlayButton" type="Button" parent="Debug/TempLoadChart"]
margin_left = 466.0
margin_right = 538.0
margin_bottom = 82.0
rect_min_size = Vector2( 72, 0 )
text = "Play"

[node name="AutoToggle" type="CheckBox" parent="Debug/TempLoadChart"]
margin_left = 546.0
margin_right = 632.0
margin_bottom = 82.0
text = "Auto"

[node name="Text" type="VBoxContainer" parent="Debug/TempLoadChart"]
margin_left = 640.0
margin_right = 1421.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="FPS" type="Label" parent="Debug/TempLoadChart/Text"]
margin_right = 781.0
margin_bottom = 39.0
size_flags_vertical = 3
align = 2
valign = 1

[node name="Version" type="Label" parent="Debug/TempLoadChart/Text"]
margin_top = 43.0
margin_right = 781.0
margin_bottom = 82.0
size_flags_vertical = 3
text = "v0.4 - new coat of paint"
align = 2
valign = 1

[connection signal="audio_played" from="." to="BarRight/DrumVisual" method="play_audio"]
[connection signal="combo_changed" from="." to="BarRight/DrumVisual" method="change_combo"]
[connection signal="key_pressed" from="." to="BarRight/DrumVisual" method="keypress_animation"]
[connection signal="marker_added" from="." to="HitError" method="new_marker"]
[connection signal="indicator_changed" from="HitError" to="." method="change_indicator"]
[connection signal="button_up" from="Debug/TempLoadChart/LoadButton" to="." method="load_func"]
[connection signal="button_up" from="Debug/TempLoadChart/PlayButton" to="." method="play_button_pressed"]
[connection signal="toggled" from="Debug/TempLoadChart/AutoToggle" to="." method="auto_toggled"]
