[gd_scene load_steps=25 format=3 uid="uid://duw1w1bhgtct6"]

[ext_resource type="Script" path="res://scenes/gameplay/gameplay.gd" id="1_3gk3b"]
[ext_resource type="Texture2D" uid="uid://clawvamc08lke" path="res://assets/default_skin/taiko-bar-right@2x.png" id="2_e5vbt"]
[ext_resource type="Texture2D" uid="uid://80ovw3jdt0id" path="res://assets/default_skin/taiko-bar-left@2x.png" id="3_fdmyn"]
[ext_resource type="Texture2D" uid="uid://dk4p0o7k8be8y" path="res://assets/default_skin/taiko-drum-outer@2x.png" id="4_enqju"]
[ext_resource type="Texture2D" uid="uid://ymlpf61n1fv8" path="res://assets/default_skin/taiko-drum-inner@2x.png" id="5_i31tg"]
[ext_resource type="Texture2D" uid="uid://b46qmmhrha5hh" path="res://assets/default_skin/taikohitcircle.png" id="6_j2wxl"]
[ext_resource type="Texture2D" uid="uid://cx3y7mnvf74yt" path="res://assets/default_skin/approachcircle.png" id="7_13i7v"]
[ext_resource type="Script" path="res://utility/audio/audio_queuer.gd" id="9_tgle1"]
[ext_resource type="Script" path="res://entites/gameplay/game_overlay.gd" id="10_4dpwm"]
[ext_resource type="Texture2D" uid="uid://b0mb0jk6hdolv" path="res://assets/default_skin/taiko-hit300.png" id="12_cbuc6"]
[ext_resource type="AudioStream" uid="uid://hfq4u36ekcwg" path="res://assets/default_skin/combobreak.wav" id="13_kii7l"]
[ext_resource type="Texture2D" uid="uid://ex1rl72k684" path="res://assets/default_skin/scorebar-bg@2x.png" id="14_npcy7"]
[ext_resource type="Texture2D" uid="uid://d15gp2oikqff3" path="res://assets/default_skin/scorebar-colour@2x.png" id="15_o6ggk"]
[ext_resource type="Texture2D" uid="uid://c1p1gflvaar81" path="res://assets/default_skin/taiko-hit100.png" id="17_pqxbr"]
[ext_resource type="PackedScene" uid="uid://y47vbpgb7qas" path="res://entites/gameplay/ui/hit_error_bar.tscn" id="17_sqh1n"]
[ext_resource type="PackedScene" uid="uid://cx25nj2j45ujs" path="res://entites/global/mascot/mascot.tscn" id="17_w7oq0"]
[ext_resource type="Texture2D" uid="uid://drwpakhqk5tm" path="res://assets/default_skin/taiko-hit0@2x.png" id="18_t1emc"]
[ext_resource type="AudioStream" uid="uid://bklysspgs8y11" path="res://assets/sfx/volchange.wav" id="19_5pjr3"]
[ext_resource type="PackedScene" uid="uid://cbwxsw5rlkahd" path="res://entites/gameplay/ui/offset_panel.tscn" id="20_4mhgx"]
[ext_resource type="Theme" uid="uid://5uta1xlclcoh" path="res://values/navigation_theme.tres" id="21_4wxp6"]

[sub_resource type="LabelSettings" id="LabelSettings_u26yd"]
font_size = 64
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n4iru"]
font_size = 48
outline_size = 8
outline_color = Color(0, 0, 0, 0.784314)

[sub_resource type="Gradient" id="Gradient_nxyxq"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.921569)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_drw2r"]
gradient = SubResource("Gradient_nxyxq")
width = 1

[node name="Gameplay" type="Control" groups=["Gameplay"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gk3b")

[node name="Track" type="TextureRect" parent="."]
visibility_layer = 2
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -237.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e5vbt")
expand_mode = 1

[node name="HitPoint" type="TextureRect" parent="Track"]
self_modulate = Color(1, 1, 1, 0.33)
visibility_layer = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 295.0
offset_top = -64.5
offset_right = 425.0
offset_bottom = 65.5
grow_vertical = 2
texture = ExtResource("6_j2wxl")
expand_mode = 1

[node name="Outline" type="TextureRect" parent="Track/HitPoint"]
self_modulate = Color(1, 1, 1, 0.5)
visibility_layer = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_13i7v")
expand_mode = 1

[node name="HitObjectContainer" type="Control" parent="Track/HitPoint"]
visibility_layer = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="DrumIndicator" type="TextureRect" parent="Track"]
visibility_layer = 16
z_index = 2
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 254.0
grow_vertical = 2
texture = ExtResource("3_fdmyn")
expand_mode = 4

[node name="LeftKat" type="TextureRect" parent="Track/DrumIndicator"]
modulate = Color(1, 1, 1, 0)
visibility_layer = 16
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 127.0
grow_vertical = 2
texture = ExtResource("4_enqju")
expand_mode = 4
flip_h = true

[node name="LeftDon" type="TextureRect" parent="Track/DrumIndicator"]
modulate = Color(1, 1, 1, 0)
visibility_layer = 16
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 127.0
grow_vertical = 2
texture = ExtResource("5_i31tg")
expand_mode = 4

[node name="RightDon" type="TextureRect" parent="Track/DrumIndicator"]
modulate = Color(1, 1, 1, 0)
visibility_layer = 16
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_i31tg")
expand_mode = 4
flip_h = true

[node name="RightKat" type="TextureRect" parent="Track/DrumIndicator"]
modulate = Color(1, 1, 1, 0)
visibility_layer = 16
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -127.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_enqju")
expand_mode = 4

[node name="AudioQueuer" type="Node2D" parent="."]
script = ExtResource("9_tgle1")

[node name="Music" type="AudioStreamPlayer" parent="." groups=["Music"]]
bus = &"Music"

[node name="BarlineTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_5pjr3")
pitch_scale = 2.0
bus = &"SFX"

[node name="GameOverlay" type="Control" parent="." groups=["ScoreManager"]]
visibility_layer = 32
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_4dpwm")
metadata/_edit_lock_ = true

[node name="Score" type="Label" parent="GameOverlay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -259.0
offset_top = -13.0
offset_right = -7.0
offset_bottom = 81.0
grow_horizontal = 0
text = "0000000"
label_settings = SubResource("LabelSettings_u26yd")
horizontal_alignment = 2

[node name="Accuracy" type="Label" parent="GameOverlay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -252.0
offset_top = 41.0
offset_right = -7.0
offset_bottom = 135.0
grow_horizontal = 0
text = "00.00%"
label_settings = SubResource("LabelSettings_u26yd")
horizontal_alignment = 2

[node name="SongProgressMeter" type="TextureProgressBar" parent="GameOverlay"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -73.0
offset_top = 120.0
offset_right = -9.0
offset_bottom = 184.0
grow_horizontal = 0
max_value = 1.0
step = 0.001
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("6_j2wxl")
texture_progress = ExtResource("6_j2wxl")
tint_under = Color(0.2, 0.2, 0.2, 1)

[node name="Combo" type="Label" parent="GameOverlay"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -149.0
offset_right = 250.0
offset_bottom = -55.0
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_u26yd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="TextureProgressBar" parent="GameOverlay"]
visible = false
layout_mode = 0
offset_right = 1298.0
offset_bottom = 40.0
scale = Vector2(0.75, 0.75)
value = 100.0
texture_under = ExtResource("14_npcy7")
texture_progress = ExtResource("15_o6ggk")

[node name="ComboBreak" type="AudioStreamPlayer" parent="GameOverlay"]
stream = ExtResource("13_kii7l")
bus = &"SFX"

[node name="RawInfo" type="Label" parent="GameOverlay"]
layout_mode = 1
offset_left = 969.0
offset_top = 2.0
offset_right = 1193.0
offset_bottom = 99.0
text = "accurate: 0
inaccurate: 0
miss: 0"

[node name="Judgements" type="Control" parent="GameOverlay"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 360.0
offset_top = -97.0
offset_right = 360.0
offset_bottom = -97.0
grow_vertical = 2

[node name="Miss" type="TextureRect" parent="GameOverlay/Judgements"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -187.0
offset_right = 184.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_t1emc")
expand_mode = 1
stretch_mode = 5

[node name="Inaccurate" type="TextureRect" parent="GameOverlay/Judgements"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -187.0
offset_right = 184.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_pqxbr")
expand_mode = 1
stretch_mode = 5

[node name="Accurate" type="TextureRect" parent="GameOverlay/Judgements"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -187.0
offset_right = 184.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_cbuc6")
expand_mode = 1
stretch_mode = 5

[node name="InaccurateFinisher" type="TextureRect" parent="GameOverlay/Judgements"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -187.0
offset_right = 184.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_pqxbr")
expand_mode = 1
stretch_mode = 5

[node name="AccurateFinisher" type="TextureRect" parent="GameOverlay/Judgements"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -187.0
offset_right = 184.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_cbuc6")
expand_mode = 1
stretch_mode = 5

[node name="HitErrorBar" parent="GameOverlay" instance=ExtResource("17_sqh1n")]
layout_mode = 1

[node name="InaccurateIndicator" type="Label" parent="GameOverlay"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 294.0
offset_top = -307.0
offset_right = 429.0
offset_bottom = -237.0
grow_vertical = 2
text = "EARLY"
label_settings = SubResource("LabelSettings_n4iru")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mascot" parent="GameOverlay" instance=ExtResource("17_w7oq0")]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_top = -501.0
offset_right = 380.0
offset_bottom = -121.0
grow_horizontal = 1
metadata/_edit_lock_ = true

[node name="OffsetPanel" parent="." instance=ExtResource("20_4mhgx")]
visible = false
layout_mode = 1
offset_left = -85.0
offset_top = -172.0
offset_right = 85.0
offset_bottom = -72.0

[node name="PauseOverlay" type="TextureRect" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("21_4wxp6")
texture = SubResource("GradientTexture1D_drw2r")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 484.0
offset_right = -484.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Resume" type="Button" parent="PauseOverlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
text = "Resume"

[node name="Retry" type="Button" parent="PauseOverlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
text = "Retry"

[node name="Quit" type="Button" parent="PauseOverlay/VBoxContainer"]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
text = "Quit"

[connection signal="on_active_changed" from="OffsetPanel" to="." method="save_local_offset"]
[connection signal="pressed" from="PauseOverlay/VBoxContainer/Resume" to="." method="change_pause_state" binds= [false]]
[connection signal="pressed" from="PauseOverlay/VBoxContainer/Retry" to="." method="restart_chart"]
